Amended more styling issues in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 
 @layer base {
   body {
-    @apply font-sans bg-gray-50 text-gray-600 dark:text-gray-100 dark:bg-black;
+    @apply font-sans bg-gray-50 text-gray-600 dark:text-gray-200 dark:bg-gray-700;
 
     main {
       @apply w-full md:w-4/5 mx-auto px-4;
@@ -73,7 +73,7 @@
             @apply space-x-0 z-10 absolute bg-gray-50 shadow-lg grid grid-cols-1 mr-4 md:mr-0;
 
             li {
-              @apply border-2 border-gray-300 p-2 block;
+              @apply border-2 border-gray-300 p-2 block dark:text-gray-600;
             }
           }
         }
@@ -94,7 +94,7 @@
           @apply w-full lg:w-1/3 lg:pl-2 py-4;
 
           section {
-            @apply p-4 rounded-lg shadow-lg bg-caribbean-green-500;
+            @apply p-4 rounded-lg shadow-lg bg-caribbean-green-500 dark:text-gray-600;
 
             ul {
               @apply list-disc pl-4;
